--- a/lifecycle-http/crud/backend/package.json
+++ b/lifecycle-http/crud/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -16,5 +15,6 @@
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "express": "4.18.2"
-  }
+  },
+  "description": ""
 }
