--- a/router/crud/backend/package.json
+++ b/router/crud/backend/package.json
@@ -2,19 +2,19 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "prestart": "npm ci",
+    "start": "nodemon server.js"
   },
-  "author": "Netology",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "engines": {
-    "node": ">=16.0.0"
-  },
-  "type": "module",
   "dependencies": {
-    "body-parser": "1.20.2",
-    "cors": "2.8.5",
-    "express": "4.18.2"
+    "koa": "2.13.4",
+    "koa-body": "4.2.0",
+    "koa-router": "7.4.0",
+    "koa2-cors": "2.0.6",
+    "nodemon": "^2.0.20"
   }
 }
